// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button disabled button should render correctly 1`] = `
.c0 {
  min-width: 150px;
  height: 30px;
  outline: none;
  border: none;
  border-radius: 4px;
  font-size: 1rem;
  font-family: 'Roboto',sans-serif;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus-visible {
  outline: 3px solid #C6725880;
  outline-offset: 1px;
}

<button
  className="c0"
  disabled={true}
  onClick={[MockFunction]}
  style={
    Object {
      "backgroundColor": "rgba(0,0,0,0)",
      "border": "#696262 solid 1px",
      "color": "#696262",
    }
  }
  type="button"
>
  Button
</button>
`;

exports[`Button should render correctly 1`] = `
.c0 {
  min-width: 150px;
  height: 30px;
  outline: none;
  border: none;
  border-radius: 4px;
  font-size: 1rem;
  font-family: 'Roboto',sans-serif;
}

.c0:hover {
  cursor: pointer;
}

.c0:focus-visible {
  outline: 3px solid #C6725880;
  outline-offset: 1px;
}

<button
  className="c0"
  onClick={[MockFunction]}
  style={
    Object {
      "backgroundColor": "#C67258",
      "border": "#C67258 solid 0",
      "color": "#FBFDFD",
    }
  }
  type="button"
>
  Button
</button>
`;
